implemented delete
